# blackbox5

./: .gitignore  .mcp-moltbot.json  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENT-GUIDE.md  AGENT-SYSTEM-SUMMARY.md  AGENTS.md  AGENT_CONTEXT.md  AUTONOMOUS-IMPROVEMENT-SETUP-COMPLETE.md  BB5-VPS-AUTONOMOUS-EXECUTOR.md  CATALOG-HEADER.txt  CATALOG.md  CLAUDE.md  CORE-COMPONENTS.md  HYBRID-MCP-IMPLEMENTATION.md  INFRASTRUCTURE-INTEGRATION-COMPLETE.md  MACMINI-SSH-TEST.md  MAC_MINI_MIGRATION_STATUS.md  MAC_MINI_RESOURCE_ANALYSIS.md  MAC_MINI_SERVER_SETUP.md  MCP-GATEWAY-DOCKER-VS-NATIVE.md  MCP-GATEWAY-QUICKSTART.md  MCP-GATEWAY-WORKING-SOLUTIONS.md  MULTI_API_SETUP.md  MULTI_API_SETUP_COMPLETE.md  NAMING.md  NATS_SETUP.md  OPENCLAW_CLI_CONFIGURATION.md  QUICK-START.md  README.md  ROADMAP-MEMORY-REORGANIZATION.md  SOUL.md  SYSTEM-MAP.yaml  TEST-RESULTS.md  TOOLS.md  VPS-DEPLOYMENT-SUMMARY.md  bb5  blackbox5-test-results.txt  capture-groups.js  (+46 more)
.autonomous/: .improvement-running.pid  README.md  STATE.yaml  autonomous-improvements.sh  autonomous-task-runner.sh  autonomous.py  goals.yaml  improvement-log.md  improvement-plan.yaml  mob-bot-results.json  prioritized-tasks.json  ralf  routes.yaml  run-agent-team.sh  (+1 more)
.claude/: hooks  (+6 more)
2-engine/07-operations/runtime/task_registry/: README.md  __init__.py  cli.py  epic_import.py  pyproject.toml  registry.py  state_machine.py  workspace.py
2-engine/07-operations/runtime/task_registry/integrations/: __init__.py  github_sync.py  vibe_kanban.py
2-engine/07-operations/runtime/task_registry/models/: __init__.py  task.py
(+29143 files in other folders)
