[project]
name = "task-registry"
version = "1.0.0"
description = "Single source of truth for hierarchical task execution tracking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
task = "task_registry.cli:task"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
